erDiagram
    SUPER_ADMIN ||--o{ INSTITUTION : approves
    INSTITUTION ||--o{ USER : has
    INSTITUTION ||--o{ COMPLAINT : owns
    USER ||--o{ CHAT_MESSAGE : sends
    COMPLAINT ||--o{ CHAT_SESSION : has
    CHAT_SESSION ||--o{ CHAT_MESSAGE : contains
    
    SUPER_ADMIN {
        string admin_id PK
        string role "System Owner"
        string email
    }
    INSTITUTION {
        string institution_id PK
        string name
        string domain
        boolean is_verified
    }
    USER {
        string user_id PK
        string institution_id FK
        string role "Principal | Committee | Student"
        string email
        string student_gr_no "Optional alternative to email"
        string password_hash
    }
    COMPLAINT {
        string tracking_id PK
        string institution_id FK
        string category
        string description
        string status "Pending | Under Investigation | Resolved | Closed"
        datetime created_at
    }
    CHAT_SESSION {
        string session_id PK
        string tracking_id FK
        boolean is_active
    }
    CHAT_MESSAGE {
        string message_id PK
        string session_id FK
        string sender_pseudo_id
        string content
        datetime timestamp
    }
